stylesheets sass files reorganised
Added button, header, footer, phase-banner components to be consistent with gov.uk frontend structure
Moved phase-banner outside the main tag
Modified button radius to give rounded corners

--- a/app/assets/stylesheets/govuk-frontend.scss
+++ b/app/assets/stylesheets/govuk-frontend.scss
@@ -8,6 +8,6 @@
 @import "govuk-frontend/objects/all";
 // We are importing all the GOVUK components here, but we could import only
 // the ones we need.
-@import "govuk-frontend/components/all";
+@import "components/all";
 @import "govuk-frontend/utilities/all";
 @import "govuk-frontend/overrides/all";
