--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
       <div class="govuk-header__logo">
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
-          <span class="ccs-logotype">
+          <span class="govuk-header__logotype">
             <%= render partial: '/layouts/logotype' %>
           </span>
         </a>
@@ -47,23 +47,23 @@
   </header>
 
   <div class="govuk-width-container">
+    <div class="govuk-phase-banner ccs-no-print">
+      <p class="govuk-phase-banner__content">
+        <strong class="govuk-tag govuk-phase-banner__content__tag ">
+          beta
+        </strong>
+        <span class="govuk-phase-banner__text">
+          This is a new service – your
+          <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+        </span>
+      </p>
+    </div>
     <main class="govuk-main-wrapper " id="main-content" role="main">
       <% if flash.key?(:error) %>
         <span class="govuk-error-message">
           <%= flash[:error] %>
         </span>
       <% end %>
-      <div class="govuk-phase-banner ccs-no-print">
-        <p class="govuk-phase-banner__content">
-          <strong class="govuk-tag govuk-phase-banner__content__tag ">
-            beta
-          </strong>
-          <span class="govuk-phase-banner__text">
-            This is a new service – your
-            <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-          </span>
-        </p>
-      </div>
       <%= yield %>
     </main>
   </div>
@@ -72,7 +72,7 @@
     <div class="govuk-footer__container govuk-width-container ">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
-          <span class="ccs-logotype">
+          <span class="govuk-footer__logotype">
             <%= render partial: '/layouts/logotype' %>
           </span>
         </div>
