--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -13,8 +13,6 @@ $govuk-compatibility-govukfrontendtoolkit: false;
 $govuk-compatibility-govuktemplate: false;
 $govuk-compatibility-govukelements: false;
 
-@import './shared/colors.scss';
-
 $govuk-colours: (
   "purple": #2e358b,
   "light-purple": #6f72af,
@@ -39,13 +37,19 @@ $govuk-colours: (
   "grey-4": #f8f8f8,
   "white": #ffffff,
 
-  "link": $ccs_link,
-  "link-hover": $ccs_link_hover,
-  "link-visited": $ccs_link_visited,
+  "link": #007194,
+  "link-hover": #15a0cc,
+  "link-visited": #15a0cc,
 
   "failure": #B10E1E,
   "warning": #DE8F1A,
-  "success": #0EB163
+  "success": #0EB163,
+
+  "primary": #9B1A47,
+  "secondary": #007E8A,
+  "dark-grey": #2F2F2F,
+
+
 );
 
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600');
@@ -55,5 +59,3 @@ $govuk-font-family-print: sans-serif;
 
 $govuk-font-weight-regular: 400;
 $govuk-font-weight-bold: 600;
-
-@import './_button.scss'
