--- a/app/assets/stylesheets/components/footer/_footer.scss
+++ b/app/assets/stylesheets/components/footer/_footer.scss
@@ -1,13 +1,7 @@
-@import './shared/colors.scss';
+@import "govuk-frontend/components/footer/footer";
 
-.govuk-header {
-  color: $ccs_header_fg;
-  background-color: $ccs_header_bg;
-}
-
-.govuk-header__container {
-  border-bottom: none;
-}
+$ccs_footer_bg: govuk-colour("dark-grey");
+$ccs_footer_fg: govuk-colour("white");
 
 .govuk-footer {
   background-color: $ccs_footer_bg;
@@ -23,21 +17,22 @@
   margin-top: 15px;
 }
 
-.govuk-header__container, .govuk-footer__container {
+.govuk-footer__container {
   padding: 15px 0;
 }
 
-.ccs-logotype svg {
+.govuk-footer__logotype svg {
   width: 110px;
   height: 90px;
 }
 
 @media (min-width: 641px) {
-  .ccs-logotype svg {
+
+  .govuk-footer__logotype svg {
     width: 140px;
   }
 
-  .ccs-logotype svg,
+  .govuk-footer__logotype svg,
   .govuk-footer__meta {
     height: 113px;
   }
@@ -51,7 +46,7 @@
     margin-bottom: 0;
   }
 
-  .govuk-header__container, .govuk-footer__container {
+  .govuk-footer__container {
     padding: 30px 0;
   }
 }
