--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -23,7 +23,10 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <p class="govuk-body">
-          <a href="javascript:window.print()" class="govuk-link">Print this page</a> or <%= link_to 'download as a spreadsheet', branches_path(params.permit(:postcode).merge(format: :xlsx)) %>
+          <a href="javascript:window.print()" class="govuk-link">Print this page</a>
+        </p>
+        <p class="govuk-body">
+          <%= link_to 'Download shortlist of suppliers', branches_path(params.permit(:postcode).merge(format: :xlsx)), { class: 'file-download' } %>
         </p>
       </div>
     </div>
