Remove school name and URN from required information guidance
We currently only search based on the postcode.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
       <p>You will also need to have:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>your school's postcode, name or URN</li>
+        <li>your school's postcode</li>
         <li>details of how long you will want the worker</li>
       </ul>
     </div>
