Mark up telephone numbers with tel: scheme URLs
This allows the numbers to be directly called if supported.

--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -10,7 +10,7 @@
   <div class="govuk-grid-column-one-quarter">
     <p class="govuk-body">
       <%= branch.contact_name %><br />
-      <%= branch.telephone_number %><br />
+      <%= link_to branch.telephone_number, tel_scheme_url(branch.telephone_number) %><br />
       <%= mail_to(branch.contact_email) %>
     </p>
   </div>
