Update home page copy
This reflects the latest changes to the home page copy as provided by
Stacey.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,15 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Find an agency supply teacher</h1>
+      <h1 class="govuk-heading-xl">Find supply teachers and non-teaching staff</h1>
 
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>find and hire a worker, using an agency</li>
+        <li>find a managed service provider</li>
         <li>create a shortlist of suppliers based on your needs and download or save it</li>
       </ul>
-
-      <p>You can use a separate service to find a managed service provider who can manage all your supply needs for you.</p>
 
       <%= link_to 'Start now', hire_via_agency_question_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
@@ -22,9 +21,11 @@
       <p>You will also need to have:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>your school's postcode</li>
+        <li>your school’s postcode</li>
         <li>details of how long you will want the worker</li>
       </ul>
+
+      <p>You can’t use this service if you’re an independent school, unless you have charitable status.</p>
     </div>
   </div>
 </div>
