Add a safe_params method to branches controller
As we add params to the search, all places where we used
params.permit needed updating. This change makes that happen
in one place, fixing two regressions in generating spreadsheet
links and in displaying errors.

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -24,7 +24,7 @@
           <a href="javascript:window.print()" class="govuk-link">Print this page</a>
         </p>
         <p class="govuk-body">
-          <%= link_to 'Download shortlist of suppliers', branches_path(params.permit!.merge(format: :xlsx)), { class: 'file-download' } %>
+          <%= link_to 'Download shortlist of suppliers', branches_path(safe_params.merge(format: :xlsx)), { class: 'file-download' } %>
         </p>
       </div>
     </div>
