--- a/app/assets/stylesheets/components/header/_header.scss
+++ b/app/assets/stylesheets/components/header/_header.scss
@@ -13,7 +13,7 @@ $ccs_header_fg: govuk-colour("white");
 .govuk-header__container {
   border-bottom: none;
   margin-bottom: 0;
-  padding: 15px 0;
+  padding: 20px 0 10px 0;
 }
 
 .govuk-header__logotype svg {
@@ -28,9 +28,5 @@ $ccs_header_fg: govuk-colour("white");
 
   .govuk-header__logotype svg {
     height: 113px;
-  }
-
-  .govuk-header__container {
-    padding: 30px 0;
   }
 }
