Add configurable email address mailto link in beta banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,8 @@
         </strong>
         <span class="govuk-phase-banner__text">
           This is a new service – your
-          <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+          <%= feedback_mail_to('feedback', class: 'govuk-link') %>
+          will help us to improve it.
         </span>
       </p>
     </div>
