--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -18,7 +18,7 @@
         <% end %>
       </div>
     </div>
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row ccs-no-print">
       <div class="govuk-grid-column-full">
         <p class="govuk-body">
           <a href="javascript:window.print()" class="govuk-link">Print this page</a>
