Add a title to managed service provider question page

--- a/app/views/search/managed_service_provider_question.html.erb
+++ b/app/views/search/managed_service_provider_question.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
 
-<p>Managed service providers</p>
+<h1 class="govuk-heading-xl">Find a managed service provider</h1>
 
 <p>There are 2 kinds of managed service provider to choose from.</p>
 
