Add the word 'provider' to managed service provider question page

--- a/app/views/search/managed_service_provider_question.html.erb
+++ b/app/views/search/managed_service_provider_question.html.erb
@@ -4,11 +4,11 @@
 
 <p>There are 2 kinds of managed service provider to choose from.</p>
 
-<p><strong>A master vendor</strong> managed service supplies whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.</p>
+<p><strong>A master vendor</strong> managed service provider supplies whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.</p>
 
 <p>You will then need to contact all the suppliers who meet your requirements and run a further competition.</p>
 
-<p><strong>A neutral vendor</strong> managed service only provides candidates from other suppliers - they have no candidates of their own.</p>
+<p><strong>A neutral vendor</strong> managed service provider only provides candidates from other suppliers - they have no candidates of their own.</p>
 
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
