Do not link to calculator when employing on the school payroll
We received some feedback on the calculator:

> The calculation element only relates to these journeys (not the
> managed service routes or employing someone fixed term on school
> payroll):
>
>  find a supplier to find a non-nominated worker
>  find a supplier to contract a nominated worker
>
> Note: this calculation is also meant to happen for when buyer is
> employing someone fixed term on school payroll, but that calculation
> is different (also we need to know whether contract is longer than
> 12 months or not) and it does not work on DfE tool at the
> moment. Not in scope for sprint 2."

I've removed the link to the calculation spreadsheet when
`school_payroll` equals `yes`.

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -25,7 +25,9 @@
         </p>
         <p class="govuk-body">
           <%= link_to 'Download shortlist of suppliers', branches_path(safe_params.merge(format: :xlsx)), { class: 'file-download' } %>
+          <% if link_to_calculator? %>
           <%= link_to 'Download shortlist (with markup calculator)', branches_path(safe_params.merge(format: :xlsx, calculations: 'yes')), { class: 'file-download' } %>
+          <% end %>
         </p>
       </div>
     </div>
