Reduce font-size of feedback text and link above footer
This should be 16px according to Alaric. Using `govuk-body-s` means that
it's 16px on larger screens and 14px on smaller screens[1]

[1]: https://design-system.service.gov.uk/styles/typography/#body-small

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
       <div class="govuk-width-container">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
-            <p class="govuk-!-margin-bottom-0">
+            <p class="govuk-!-margin-bottom-0 govuk-body-s">
               Having problems using this service? Email
               <%= mail_to(Marketplace.feedback_email_address, nil, class: 'govuk-link') %>
               for support.
