styling the suppliers list

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -57,5 +57,9 @@ $govuk-colours: (
 $govuk-font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
 $govuk-font-family-print: sans-serif;
 
+$govuk-font-weight-light: 200;
 $govuk-font-weight-regular: 400;
 $govuk-font-weight-bold: 600;
+
+$govuk-heading-xl: 48px;
+$govuk-heading-l: 27px;
