--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -28,3 +28,5 @@
 @import "header/header";
 @import "footer/footer";
 @import "phase-banner/phase-banner";
+@import "supplier-record/supplier-record";
+@import "typography/typography";
