--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -3,16 +3,15 @@
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <div class="govuk-grid-row">
-          <h1 class="govuk-heading-xl">Suppliers List</h1>
-          <p class="govuk-body">
-            <% if @location %>
-            <span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @location.postcode %></strong>
-            <% else %>
-            <span class="govuk-body-l"><%= @branches.count %></span> results found
-            <% end %>
-          </p>
-        </div>
+        <h1 class="govuk-heading-xl cmp-page-heading">Suppliers List</h1>
+        <p class="govuk-body">
+          <% if @location %>
+          <span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @location.postcode %></strong>
+          <% else %>
+          <span class="govuk-body-l"><%= @branches.count %></span> results found
+          <% end %>
+        </p>
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         <% if @branches.any? %>
           <%= render partial: 'branch', collection: @branches %>
         <% end %>
