--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -1,33 +1,40 @@
-<div class="govuk-grid-row branch">
-  <h2 class="govuk-heading-l"><%= branch.supplier_name %></h2>
-  <div class="govuk-grid-column-one-quarter">
-    <ul class="govuk-list">
+<div class="supplier-record">
+  <div class="govuk-grid-row supplier-record__header-group">
+    <div class="govuk-grid-column-full"> 
+      <h2 class="govuk-heading-m govuk-!-font-size-27 supplier-record__supplier-name"><%= branch.supplier_name %></h2>
       <% if branch.name.present? %>
-        <li><b>Branch:</b> <%= branch.name %></li>
+        <h4 class="govuk-heading-s supplier-record__branch">Branch: <span class="supplier-record__branch-name"><%= branch.name %></span></h4>
       <% end %>
-    </ul>
+    </div>
   </div>
-  <div class="govuk-grid-column-one-quarter">
-    <p class="govuk-body">
-      <%= branch.contact_name %><br />
-      <%= branch.telephone_number %><br />
-      <%= mail_to(branch.contact_email) %>
-    </p>
-  </div>
-  <div class="govuk-grid-column-one-quarter">
-    <% if branch.rate %>
-      <p class="govuk-body govuk-!-font-size-48 markup-rate">
-        <%= number_to_percentage(branch.rate * 100, precision: 1) %>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <p class="govuk-body">
+        <strong><%= branch.contact_name %></strong><br />
+        <%= branch.telephone_number %><br />
+        <%= mail_to(branch.contact_email) %>
       </p>
-      <p class="govuk-body-s markup-rate-units">Mark-up</p>
-    <% end %>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      <div class="govuk-grid-row">
+        <% if branch.rate %>
+          <div class="govuk-grid-column-one-half">
+            <p class="govuk-body govuk-!-font-size-36 supplier-record__markup-rate">
+              <%= number_to_percentage(branch.rate * 100, precision: 1) %>
+            </p>
+            <p class="govuk-body-s supplier-record__markup-rate-units">Mark-up</p>
+          </div>
+        <% end %>
+        <% if branch.distance %>
+          <div class="govuk-grid-column-one-half">
+            <p class="govuk-body govuk-!-font-size-36 supplier-record__distance">
+              <%= number_with_precision(metres_to_miles(branch.distance), precision: 1) %>
+            </p>
+            <p class="govuk-body-s supplier-record__distance-units">Miles</p>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-  <div class="govuk-grid-column-one-quarter">
-    <% if branch.distance %>
-      <p class="govuk-body govuk-!-font-size-48 distance">
-        <%= number_with_precision(metres_to_miles(branch.distance), precision: 1) %>
-      </p>
-      <p class="govuk-body-s distance-units">miles</p>
-    <% end %>
-  </div>
+  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 </div>
