--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <p class="govuk-!-margin-bottom-0 govuk-body-s">
-              Having problems using this service? Email
+              <span class="govuk-!-font-weight-bold">Having problems using this service?</span> Email
               <%= mail_to(Marketplace.feedback_email_address, nil, class: 'govuk-link') %>
               for support.
             </p>
