--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,14 +49,25 @@
 
     <div class="govuk-width-container">
       <div class="govuk-phase-banner ccs-no-print">
-        <p class="govuk-phase-banner__content">
-          <strong class="govuk-tag govuk-phase-banner__content__tag">
-            <%= t('.beta') %>
-          </strong>
-          <span class="govuk-phase-banner__text">
-            <%= t('.feedback_html', link: feedback_email_link) %>
-          </span>
-        </p>
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+            <p class="govuk-phase-banner__content">
+              <strong class="govuk-tag govuk-phase-banner__content__tag">
+                <%= t('.beta') %>
+              </strong>
+              <span class="govuk-phase-banner__text">
+                <%= t('.feedback_html', link: feedback_email_link) %>
+              </span>
+            </p>
+          </div>
+          <div class="govuk-grid-column-one-third">
+            <% if logged_in? %>
+            <div>
+              <%= button_to "Logout", logout_path, class: 'govuk-button govuk-!-margin-0' %>
+            </div>
+            <% end %>
+          </div>
+        </div>
       </div>
       <% if @back_path.present? %>
         <%= link_to t('.back'), @back_path, class: 'govuk-back-link' %>
