--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -7,7 +7,6 @@
 @import "govuk-frontend/components/details/details";
 @import "govuk-frontend/components/error-message/error-message";
 @import "govuk-frontend/components/error-summary/error-summary";
-@import "govuk-frontend/components/fieldset/fieldset";
 @import "govuk-frontend/components/file-upload/file-upload";
 @import "govuk-frontend/components/hint/hint";
 @import "govuk-frontend/components/input/input";
@@ -27,6 +26,7 @@
 @import "button/button";
 @import "header/header";
 @import "footer/footer";
+@import "fieldset/fieldset";
 @import "phase-banner/phase-banner";
 @import "supplier-record/supplier-record";
 @import "typography/typography";
