Move feedback bar into the footer
This is in preparation for making the footer "sticky" so that it always
appears at the bottom of the page.

Note that I've removed the border-top from govuk-footer to avoid a dark
grey border appearing at the top of the light grey feedback bar.

--- a/app/assets/stylesheets/components/footer/_footer.scss
+++ b/app/assets/stylesheets/components/footer/_footer.scss
@@ -7,6 +7,7 @@ $ccs_footer_fg: govuk-colour("white");
   background-color: $ccs_footer_bg;
   color: $ccs_footer_fg;
   padding: 0;
+  border-top: none;
 }
 
 .govuk-footer__meta {
