Increase the size of the postcode question text
I've made the `label` element the heading as per
https://design-system.service.gov.uk/get-started/labels-legends-headings/.

I've set the line-height of the label class to match the line height of
the legends in d9e446fbe24da8919ab50ee68a0be2e6d62b6bf2 so that the
question text lines up across all questions.

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -11,7 +11,6 @@
 @import "govuk-frontend/components/hint/hint";
 @import "govuk-frontend/components/input/input";
 @import "govuk-frontend/components/inset-text/inset-text";
-@import "govuk-frontend/components/label/label";
 @import "govuk-frontend/components/panel/panel";
 @import "govuk-frontend/components/tabs/tabs";
 @import "govuk-frontend/components/tag/tag";
@@ -27,6 +26,7 @@
 @import "header/header";
 @import "footer/footer";
 @import "fieldset/fieldset";
+@import "label/label";
 @import "phase-banner/phase-banner";
 @import "supplier-record/supplier-record";
 @import "typography/typography";
