--- a/app/views/search/school_postcode_question.html.erb
+++ b/app/views/search/school_postcode_question.html.erb
@@ -5,9 +5,11 @@
   <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
   <%= hidden_field_tag :school_payroll, params[:school_payroll] %>
   <div class="govuk-form-group">
-    <label class="govuk-label" for="postcode">
-      What is your school's postcode?
-    </label>
+    <h1 class="govuk-label-wrapper">
+      <label class="govuk-label govuk-label--m" for="postcode">
+        What is your school's postcode?
+      </label>
+    </h1>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   </div>
   <%= submit_tag 'Continue', class: "govuk-button" %>
