content update for Start page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>find and hire a worker, using an agency</li>
-        <li>find a managed service provider</li>
+        <li>find a managed service provider, who can take on all your temporary staff needs</li>
         <li>create a shortlist of suppliers based on your needs and download or save it</li>
       </ul>
 
@@ -26,6 +26,8 @@
       </ul>
 
       <p>You can’t use this service if you’re an independent school, unless you have charitable status.</p>
+
+      <p>To find permanent teaching staff, use the <a href="#">Teaching Job</a> service.</p>
     </div>
   </div>
 </div>
