Use journey steps for the search controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
         <li>create a shortlist of suppliers based on your needs and download or save it</li>
       </ul>
 
-      <%= link_to 'Start now', hire_via_agency_question_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+      <%= link_to 'Start now', search_question_path(slug: 'hire-via-agency'), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
