Content updated and sidebar added

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -28,5 +28,6 @@
 @import "fieldset/fieldset";
 @import "label/label";
 @import "phase-banner/phase-banner";
+@import "sidebar/sidebar";
 @import "supplier-record/supplier-record";
 @import "typography/typography";
