--- a/app/views/search/school_payroll_question.html.erb
+++ b/app/views/search/school_payroll_question.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div class="govuk-radios__item">
           <%= radio_button_tag :school_payroll, :no, checked?(params[:school_payroll], 'no'), class: 'govuk-radios__input' %>
-          <%= label_tag :school_payroll_no, 'No', class: 'govuk-label govuk-radios__label' %>
+          <%= label_tag :school_payroll_no, 'No, I want the agency to deal with payroll', class: 'govuk-label govuk-radios__label' %>
         </div>
       </div>
     </fieldset>
