--- a/app/views/search/hire_via_agency_question.html.erb
+++ b/app/views/search/hire_via_agency_question.html.erb
@@ -1,24 +1,49 @@
 <%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
 
-<%= form_tag @form_path, method: :get do %>
-  <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        <h1 class="govuk-fieldset__heading">
-          What are you looking for?
-        </h1>
-      </legend>
-      <div class="govuk-radios">
-        <div class="govuk-radios__item">
-          <%= radio_button_tag :hire_via_agency, :yes, checked?(params[:hire_via_agency], 'yes'), class: 'govuk-radios__input' %>
-          <%= label_tag :hire_via_agency_yes, 'Hire a worker via an agency', class: 'govuk-label govuk-radios__label' %>
-        </div>
-        <div class="govuk-radios__item">
-          <%= radio_button_tag :hire_via_agency, :no, checked?(params[:hire_via_agency], 'no'), class: 'govuk-radios__input' %>
-          <%= label_tag :hire_via_agency_no, 'Hire a managed service provider', class: 'govuk-label govuk-radios__label' %>
-        </div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <%= form_tag @form_path, method: :get do %>
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h1 class="govuk-fieldset__heading">
+              How do you want to hire the worker?
+            </h1>
+          </legend>
+          <div class="govuk-radios">
+            <div class="govuk-radios__item">
+              <%= radio_button_tag :hire_via_agency, :yes, checked?(params[:hire_via_agency], 'yes'), class: 'govuk-radios__input' %>
+              <%= label_tag :hire_via_agency_yes, 'Through an agency', class: 'govuk-label govuk-radios__label' %>
+            </div>
+            <div class="govuk-radios__item">
+              <%= radio_button_tag :hire_via_agency, :no, checked?(params[:hire_via_agency], 'no'), class: 'govuk-radios__input' %>
+              <%= label_tag :hire_via_agency_no, 'Through a managed service provider', class: 'govuk-label govuk-radios__label' %>
+            </div>
+          </div>
+        </fieldset>
       </div>
-    </fieldset>
+      <%= submit_tag 'Continue', class: "govuk-button" %>
+    <% end %>
   </div>
-  <%= submit_tag 'Continue', class: "govuk-button" %>
-<% end %>
+  <div class="govuk-grid-column-one-third">
+
+    <aside class="cmp-sidebar" role="complementary">
+      <h2 class="govuk-heading-m" id="subsection-title">
+        Managed Service Provider
+      </h2>
+      <p class="govuk-body">You will need to choose either:</p>
+      <h4 class="govuk-heading-s">A Master Vendor</h4>
+      <p class="govuk-body">
+        These supply whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.
+        <br>
+        You will then need to contact all the suppliers and run a further competition.
+      </p>
+      <p class="govuk-body">or</p>
+      <h4 class="govuk-heading-s">A Neutral Vendor</h4>
+      <p class="govuk-body">
+        A neutral vendor only provides candidates from other suppliers - they have no candidates of their own.
+      </p>
+    </aside>
+
+  </div>
+</div>
