--- a/app/views/suppliers/master_vendor_managed_service_providers.html.erb
+++ b/app/views/suppliers/master_vendor_managed_service_providers.html.erb
@@ -1,3 +1,11 @@
-<%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
-
-<p>TODO: Master vendor managed service providers will be listed here.</p>
+<div class="govuk-width-container">
+  <%= link_to 'Back', @back_path, class: 'govuk-back-link ccs-no-print' %>
+  <main class="govuk-main-wrapper">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        <h1 class="govuk-heading-xl cmp-page-heading">Master vendor managed service providers</h1>
+        <%= render partial: 'master_vendor_supplier', collection: @suppliers %>
+      </div>
+    </div>
+  </main>
+</div>
