--- a/app/views/search/neutral_vendor_managed_service.html.erb
+++ b/app/views/search/neutral_vendor_managed_service.html.erb
@@ -1,1 +1,14 @@
-<p>TODO: Neutral vendor managed service providers will be listed here.</p>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-xl cmp-page-heading">Neutral vendor managed service providers</h1>
+    <% Supplier.with_neutral_vendor_rates.each do |supplier| %>
+      <h2 class="govuk-heading-m"><%= supplier.name %></h2>
+      <% supplier.rates.each do |rate| %>
+        <p>
+          <%= Rate::JOB_TYPES[rate.job_type] %>
+          <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
+        </p>
+      <% end %>
+    <% end %>
+  </div>
+</div>
