Content update for postcode search page

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -3,7 +3,7 @@
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <h1 class="govuk-heading-xl cmp-page-heading">Suppliers List</h1>
+        <h1 class="govuk-heading-xl cmp-page-heading">Suppliers list</h1>
         <p class="govuk-body">
           <% if @location %>
           <span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= Branch::DEFAULT_SEARCH_RANGE_IN_MILES %> miles</strong> of <strong><%= @location.postcode %></strong>
