Add a couple of styles to the master vendor MSPs page
* I've copied these styles from the supplier-record component; these
were the only ones that I was reasonably confident were applicable.

* I haven't yet added print styles; I plan to do that in a subsequent
commit.

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -30,4 +30,5 @@
 @import "phase-banner/phase-banner";
 @import "sidebar/sidebar";
 @import "supplier-record/supplier-record";
+@import "master-vendor-record/master-vendor-record";
 @import "typography/typography";
