--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
 
       <p>You can’t use this service if you’re an independent school, unless you have charitable status.</p>
 
-      <p>To find permanent teaching staff, use the <a href="#">Teaching Job</a> service.</p>
+      <p>To find permanent teaching staff, use the <a href="#">Teaching Jobs</a> service.</p>
     </div>
   </div>
 </div>
