--- a/app/views/search/hire_via_agency.html.erb
+++ b/app/views/search/hire_via_agency.html.erb
@@ -29,17 +29,17 @@
 
     <aside class="cmp-sidebar" role="complementary">
       <h2 class="govuk-heading-m" id="subsection-title">
-        Managed Service Provider
+        Managed service providers
       </h2>
       <p class="govuk-body">You will need to choose either:</p>
-      <h4 class="govuk-heading-s">A Master Vendor</h4>
+      <h4 class="govuk-heading-s">A master vendor</h4>
       <p class="govuk-body">
         These supply whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.
         <br>
         You will then need to contact all the suppliers and run a further competition.
       </p>
       <p class="govuk-body">or</p>
-      <h4 class="govuk-heading-s">A Neutral Vendor</h4>
+      <h4 class="govuk-heading-s">A neutral vendor</h4>
       <p class="govuk-body">
         A neutral vendor only provides candidates from other suppliers - they have no candidates of their own.
       </p>
