Fix back link from start of process
There's no preceding step, so hard-coding this to the homepage works as
a quick fix.

--- a/app/views/search/hire_via_agency.html.erb
+++ b/app/views/search/hire_via_agency.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Back', @back_path, class: 'govuk-back-link' %>
+<%= link_to 'Back', homepage_path, class: 'govuk-back-link' %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
