--- a/app/views/suppliers/master_vendors.html.erb
+++ b/app/views/suppliers/master_vendors.html.erb
@@ -3,7 +3,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl cmp-page-heading">Master vendor managed service providers</h1>
-        <%= render partial: 'master_vendor_supplier', collection: @suppliers %>
+        <%= render partial: 'master_vendor', collection: @suppliers %>
       </div>
     </div>
   </main>
