--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -1,9 +1,9 @@
 <div class="supplier-record">
   <div class="govuk-grid-row supplier-record__header-group">
-    <div class="govuk-grid-column-full"> 
+    <div class="govuk-grid-column-full">
       <h2 class="govuk-heading-m govuk-!-font-size-27 supplier-record__supplier-name"><%= branch.supplier_name %></h2>
       <% if branch.name.present? %>
-        <h4 class="govuk-heading-s supplier-record__branch">Branch: <span class="supplier-record__branch-name"><%= branch.name %></span></h4>
+        <h4 class="govuk-heading-s supplier-record__branch"><%= t('.branch') %>: <span class="supplier-record__branch-name"><%= branch.name %></span></h4>
       <% end %>
     </div>
   </div>
@@ -22,7 +22,7 @@
             <p class="govuk-body govuk-!-font-size-36 supplier-record__markup-rate">
               <%= number_to_percentage(branch.rate * 100, precision: 1) %>
             </p>
-            <p class="govuk-body-s supplier-record__markup-rate-units">Mark-up</p>
+            <p class="govuk-body-s supplier-record__markup-rate-units"><%= t('.markup') %></p>
           </div>
         <% end %>
         <% if branch.distance %>
@@ -30,7 +30,7 @@
             <p class="govuk-body govuk-!-font-size-36 supplier-record__distance">
               <%= number_with_precision(metres_to_miles(branch.distance), precision: 1) %>
             </p>
-            <p class="govuk-body-s supplier-record__distance-units">Miles</p>
+            <p class="govuk-body-s supplier-record__distance-units"><%= t('.miles') %></p>
           </div>
         <% end %>
       </div>
