--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,11 +1,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl cmp-page-heading">Suppliers list</h1>
+    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
     <p class="govuk-body">
       <% if @location %>
-      <span class="govuk-body-l"><%= @branches.count %></span> results found within <strong><%= default_search_range %></strong> of <strong><%= @location.postcode %></strong>
+      <span class="govuk-body-l"><%= @branches.count %></span> <%= t('.results_found_with_location_html', range: default_search_range, postcode: @location.postcode) %>
       <% else %>
-      <span class="govuk-body-l"><%= @branches.count %></span> results found
+      <span class="govuk-body-l"><%= @branches.count %></span> <%= t('.results_found') %>
       <% end %>
     </p>
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
@@ -17,12 +17,12 @@
 <div class="govuk-grid-row ccs-no-print">
   <div class="govuk-grid-column-full">
     <p class="govuk-body">
-      <a href="javascript:window.print()" class="govuk-link">Print this page</a>
+      <a href="javascript:window.print()" class="govuk-link"><%= t('.print') %></a>
     </p>
     <p class="govuk-body">
-      <%= link_to 'Download shortlist of suppliers', branches_path(safe_params.merge(format: :xlsx)), { class: 'file-download' } %>
+      <%= link_to t('.download'), branches_path(safe_params.merge(format: :xlsx)), { class: 'file-download' } %>
       <% if link_to_calculator? %>
-      <%= link_to 'Download shortlist (with markup calculator)', branches_path(safe_params.merge(format: :xlsx, calculations: 'yes')), { class: 'file-download' } %>
+      <%= link_to t('.download_with_calculator'), branches_path(safe_params.merge(format: :xlsx, calculations: 'yes')), { class: 'file-download' } %>
       <% end %>
     </p>
   </div>
